--- a/src/app/sistema/financeiro/contas-a-receber/contas-a-receber.component.html
+++ b/src/app/sistema/financeiro/contas-a-receber/contas-a-receber.component.html
@@ -56,7 +56,7 @@
 
 <!-- Tabela de contas -->
 <div class="table-responsive mt-5">
-  <table class="table text-custom-dark">
+  <table id="excel-table" class="table text-custom-dark">
     <thead>
       <tr>
         <th scope="col">Cód.</th>
@@ -79,7 +79,7 @@
         <td>{{ recebimentos?.descricao }}</td>
         <td>{{ recebimentos?.cliente }}</td>
         <td>{{ recebimentos?.pagamento }}</td>
-        <td>{{ recebimentos?.data }}</td>
+        <td>{{ recebimentos?.data | date }}</td>
         <td>{{ recebimentos?.valorTotal | currency: "BRL" }}</td>
         <td>{{ recebimentos?.situacao }}</td>
         <td>{{ recebimentos?.unidade }}</td>
@@ -114,7 +114,7 @@
   <!-- Botão Exportar CSV -->
   <div class="col-3 px-2 p-0 m-0 d-grid">
     <button
-    (click)="exportexcel()"
+    (click)="exportExcel()"
       type="button"
       class="h-limited btn rounded-15 py-1 px-4 btn-outline-secondary d-flex justify-content-between shadow-sm"
     >
