--- a/src/app/sistema/vendas/pedidos-vendas/listar-pedidos-vendas/listar-pedidos-vendas.component.html
+++ b/src/app/sistema/vendas/pedidos-vendas/listar-pedidos-vendas/listar-pedidos-vendas.component.html
@@ -36,7 +36,7 @@
         <!-- Pedidos em digitação -->
         <div class="col-4 px-2 p-0 m-0 form-floating">
           <input
-            [value]="totalPedidos(pedidosAguardando) | currency: 'BRL'"
+            [value]="totalPedidos(pedidosAprovados) | currency: 'BRL'"
             font="montserrat"
             class="form-control form-control-lg border-0 h-100 pb-2 pt-3 ps-4 pe-5 rounded-15 shadow-sm text-center bg-white text-custom-dark"
             id="gerados"
@@ -44,7 +44,7 @@
             type="text"
           />
           <label class="ms-2 small text-truncate" for="gerados"
-            >{{ pedidosAguardando.length }} pedidos em digitação</label
+            >{{ pedidosAprovados.length }} pedidos aprovados</label
           >
         </div>
       </div>
