--- a/src/app/sistema/vendas/vendas-diretas/listar-vendas-diretas/listar-vendas-diretas.component.html
+++ b/src/app/sistema/vendas/vendas-diretas/listar-vendas-diretas/listar-vendas-diretas.component.html
@@ -26,8 +26,8 @@
                 </div>
 
                 <div class="col-3 px-2 p-0 m-0 form-floating">
-                    <input [value]="totalValue(pedidos) | currency: 'BRL'" font="montserrat" class="form-control form-control-lg border-0 h-100 pb-2 pt-3 ps-4 pe-5 rounded-15 shadow-sm text-center bg-white text-custom-dark" id="gerados" readonly type="text" />
-                    <label class="ms-2 small text-truncate" for="gerados">{{ pedidos.length }} pedidos gerados</label
+                    <input [value]="totalValue(pedidosGerados) | currency: 'BRL'" font="montserrat" class="form-control form-control-lg border-0 h-100 pb-2 pt-3 ps-4 pe-5 rounded-15 shadow-sm text-center bg-white text-custom-dark" id="gerados" readonly type="text" />
+                    <label class="ms-2 small text-truncate" for="gerados">{{ pedidosGerados.length }} pedidos gerados</label
           >
         </div>
 
